--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <img class="header__logo" src="./images/Logo.png" alt="логотип 'Mesto Russia' ">
 
   </header>
-<main>
+<main class="content">
   <section class="profile">
     <div class="profile__data">
       <img class="profile__avatar" src="./images/image.jpg" alt="Жак-Ив Кусто">
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто<img class="profile__edit-button" src="./images/Edit_Button.png"></h1>
-        <p class="profile__subtitle">Исследователь океана</p>
+        <h1 class="profile__name">Жак-Ив Кусто
+          <img class="profile__edit-button" src="./images/Edit_Button.png">
+        </h1>
+        <p class="profile__description">Исследователь океана</p>
       </div>
     </div>
     <img class="profile__add-button" src="./images/Add_Button.png">
@@ -32,50 +34,63 @@
       <img class="elements__image" src="./images/Paris.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Париж</h3>
-        <img class="elements__like" src="./images/Like.png" alt="">
+        <button class="elements__like"></button>
       </div>
     </div>
     <div class="elements__card">
       <img class="elements__image" src="./images/Amsterdam.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Амстердам</h3>
-        <img class="elements__like" src="./images/Like.png" alt="">
+        <button class="elements__like"></button>
       </div>
     </div>
     <div class="elements__card">
       <img class="elements__image" src="./images/Stockholm.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Стокгольм</h3>
-          <img class="elements__like" src="./images/Like.png" alt="">
+          <button class="elements__like"></button>
       </div>
     </div>
     <div class="elements__card">
       <img class="elements__image" src="./images/Moscow.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Москва</h3>
-        <img class="elements__like" src="./images/Like.png" alt="">
+        <button class="elements__like"></button>
       </div>
     </div>
     <div class="elements__card">
       <img class="elements__image" src="./images/Piter.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Санкт-Петербург</h3>
-        <img class="elements__like" src="./images/Like.png" alt="">
+        <button class="elements__like"></button>
       </div>
     </div>
     <div class="elements__card">
       <img class="elements__image" src="./images/Mozhaysk.jpg" alt="">
       <div class="elements__card-caption">
         <h2 class="elements__title">Можайск</h3>
-        <img class="elements__like" src="./images/Like.png" alt="">
+        <button class="elements__like"></button>
       </div>
     </div>
   </section>
+  
 </main>
 
 <footer class="footer">
-  <p>&copy; 2020 Mesto Russia</p>
+  <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
 
 </footer>
+<div class="popup">
+  <div class="popup__container">
+    <button class="popup__close-button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="edit-form" action="#">
+        <input class="edit-form__text-field" type="text" name="name">
+        <input class="edit-form__text-field" name="description">
+        <button class="edit-form__save-button" type="submit">Сохранить</button>
+      </form>
+    </div>
+  </div>
 </body>
+<script src="scripts/index.js" defer></script>
 </html>
