--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div class="profile__data">
       <img class="profile__avatar" src="./images/image.jpg" alt="Жак-Ив Кусто">
       <div class="profile__info">
-        <h1 class="profile__name">Жак-Ив Кусто
-          <img class="profile__edit-button" src="./images/Edit_Button.png">
-        </h1>
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__description">Исследователь океана</p>
+        <button class="profile__edit-button"></button>
       </div>
     </div>
     <img class="profile__add-button" src="./images/Add_Button.png">
