--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="profile__edit-button"></button>
       </div>
     </div>
-    <img class="profile__add-button" src="./images/Add_Button.png">
+    <button class="profile__add-button"></button>
 
   </section>
   <section class="elements">
