--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="popup__container">
     <button class="popup__close-button" type="button" ></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="form">
+      <form class="form" name="profile-edit-form">
         <input class="form__text-field" type="text" name="input_name">
         <input class="form__text-field" type="text" name="input_description">
         <button class="form__save-button" type="submit">Сохранить</button>
