--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button class="elements__trash" type="button"></button>
       <div class="elements__card-caption">
         <h2 class="elements__title">Париж</h2>
-        <button type="button" class="elements__like"></button>
+        <button type="button" class="elements__like" name="elements__like"></button>
       </div>
     </div>
     </template>
@@ -69,7 +69,7 @@
       <div class="popup__image-container">
         <img class="popup__image" src="./images/Mozhaysk.jpg" alt="Никольский собор в Можайске">
         <button class="popup__close-button" type="button"></button>
-        <p class="popup__">Можайск</p>
+        <p class="popup__view-title">Можайск</p>
       </div>
     </div>
   <script src="scripts/index.js" defer></script>
