Change name to id in some places

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   </section>
   <section class="elements">
-    <template name="card">
+    <template id="card">
     <div class="elements__card">
       <img class="elements__image" src="./images/Paris.jpg" alt="Панорама Парижа с цветущей магнолией">
       <button class="elements__trash" type="button"></button>
@@ -43,7 +43,7 @@
   <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
 
 </footer>
-<div class="popup" name="popup_edit">
+<div class="popup" id="popup_edit">
   <div class="popup__container">
     <button class="popup__close-button" type="button" ></button>
       <h2 class="popup__title">Редактировать профиль</h2>
@@ -54,7 +54,7 @@
       </form>
     </div>
   </div>
-  <div class="popup" name="popup_add">
+  <div class="popup" id="popup_add">
     <div class="popup__container">
       <button class="popup__close-button" type="button" ></button>
         <h2 class="popup__title">Новое место</h2>
@@ -65,7 +65,7 @@
         </form>
       </div>
     </div>
-    <div class="popup" name="popup_view">
+    <div class="popup" id="popup_view">
       <div class="popup__image-container">
         <img class="popup__image" src="./images/Mozhaysk.jpg" alt="Никольский собор в Можайске">
         <button class="popup__close-button" type="button"></button>
