Add validation and close popup by click on overlay

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
       <button class="popup__close-button" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="form" name="profile-edit-form">
-        <input class="form__text-field" type="text" name="input_name">
-        <input class="form__text-field" type="text" name="input_description">
+        <input placeholder="Имя" class="form__text-field" type="text" name="input_name" minlength="2" maxlength="40"
+          required>
+        <span class="form__input-error input_name-error"></span>
+        <input placeholder="О себе" class="form__text-field" type="text" name="input_description" minlength="2"
+          maxlength="200" required>
+        <span class="form__input-error input_description-error"></span>
         <button class="form__save-button" type="submit">Сохранить</button>
       </form>
     </div>
@@ -51,9 +55,12 @@
       <button class="popup__close-button" type="button"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="form" name="card-add-form">
-        <input placeholder="Название" class="form__text-field" type="text" name="place_name">
-        <input placeholder="Ссылка на картинку" class="form__text-field" type="text" name="place_link">
-        <button class="form__save-button" type="submit">Сохранить</button>
+        <input placeholder="Название" class="form__text-field" type="text" name="place_name" minlength="2"
+          maxlength="30" required>
+        <span class="form__input-error place_name-error"></span>
+        <input placeholder="Ссылка на картинку" class="form__text-field" type="url" name="place_link" required>
+        <span class="form__input-error place_link-error"></span>
+        <button class="form__save-button" type="submit">Создать</button>
       </form>
     </div>
   </div>
@@ -76,6 +83,7 @@
   </template>
   <script src="scripts/initial-cards.js"></script>
   <script src="scripts/index.js" defer></script>
+  <script src="scripts/validate.js"></script>
 </body>
 
 </html>
