--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       </div>
     </div>
   </template>
+  <script src="scripts/constants.js"></script>
   <script src="scripts/initial-cards.js"></script>
   <script src="scripts/index.js" defer></script>
   <script src="scripts/validate.js"></script>
