ready for first review

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
     </div>
   </template>
   <script src="scripts/constants.js"></script>
-  <script src="scripts/initial-cards.js"></script>
-  <script src="scripts/index.js" defer></script>
-  <script src="scripts/validate.js"></script>
+  <script type="module" src="scripts/popup.js"></script>
+  <script type="module" src="scripts/initial-cards.js"></script>
+  <script type="module" src="scripts/formvalidator.js"></script>
+  <script type="module" src="scripts/card.js"></script>
+  <script type="module" src="scripts/index.js" defer></script>
+
 </body>
 
 </html>
