--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       </div>
     </div>
   </template>
-  <script src="scripts/constants.js"></script>
+  <!-- <script src="scripts/constants.js"></script>
   <script type="module" src="scripts/popup.js"></script>
   <script type="module" src="scripts/initial-cards.js"></script>
   <script type="module" src="scripts/formvalidator.js"></script>
-  <script type="module" src="scripts/card.js"></script>
+  <script type="module" src="scripts/card.js"></script> -->
   <script type="module" src="scripts/index.js" defer></script>
 
 </body>
