--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     Загрузка модуля по адресу «https://nastasjaavilova.github.io/mesto/scripts/formvalidator.js»
     была заблокирована из-за неразрешенного MIME-типа («text/html»).
   -->
-  <script type="module" src="scripts/constants.js"></script>
+  <!-- <script type="module" src="scripts/constants.js"></script>
   <script type="module" src="scripts/popup.js"></script>
   <script type="module" src="scripts/initial-cards.js"></script>
   <script type="module" src="scripts/formvalidator.js"></script>
-  <script type="module" src="scripts/card.js"></script>
+  <script type="module" src="scripts/card.js"></script> -->
   <script type="module" src="scripts/index.js"></script>
 
 </body>
