--- a/src/index.html
+++ b/src/index.html
@@ -112,13 +112,42 @@
         <button class="elements__trash" type="button"></button>
         <div class="elements__card-caption">
           <h2 class="elements__title">Париж</h2>
-          <button
-            type="button"
-            class="elements__like"
-            name="elements__like"
-          ></button>
+          <div class="elements__like-container">
+            <button
+              type="button"
+              class="elements__like"
+              name="elements__like"
+            ></button>
+            <div class="elements__like-counter"></div>
+          </div>
         </div>
       </div>
     </template>
+    <div class="popup" id="popup_confirmation">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <h2 class="popup__title">Вы уверены?</h2>
+          <button class="form__save-button form__yes-button">Да</button>
+        </form>
+      </div>
+    </div>
+    <div class="popup" id="popup_avatar">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <form class="form" name="avatar-form">
+          <span class="form__input-error" id="place_name-error"></span>
+          <input
+            placeholder="Ссылка на аватар"
+            class="form__text-field"
+            type="url"
+            name="place_link"
+            required
+          />
+          <span class="form__input-error" id="place_link-error"></span>
+          <button class="form__save-button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
