--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__data">
-          <img
-            class="profile__avatar"
-            src="<%=require('./images/image.jpg')%>"
-            alt="Жак-Ив Кусто"
-          />
+          <div class="profile__avatar"></div>
           <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit-button"></button>
