--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Вы уверены?</h2>
-          <button class="form__save-button form__yes-button">Да</button>
+          <button class="form__save-button form__save-button_margin">Да</button>
         </form>
       </div>
     </div>
