--- a/src/index.html
+++ b/src/index.html
@@ -132,15 +132,15 @@
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title">Обновить аватар</h2>
         <form class="form" name="avatar-form">
-          <span class="form__input-error" id="place_name-error"></span>
+          <span class="form__input-error" id="avatar_name-error"></span>
           <input
             placeholder="Ссылка на аватар"
             class="form__text-field"
             type="url"
-            name="place_link"
+            name="avatar_link"
             required
           />
-          <span class="form__input-error" id="place_link-error"></span>
+          <span class="form__input-error" id="avatar_link-error"></span>
           <button class="form__save-button" type="submit">Сохранить</button>
         </form>
       </div>
