--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         <div class="profile__data">
           <div class="profile__avatar"><img class="profile__avatar-edit" src="<%=require('./images/pencil.svg')%>" alt="Обновить аватар"></div>
           <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" class="profile__edit-button"></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
         </div>
         <button type="button" class="profile__add-button"></button>
